style.css
* {
  font-family: "Roboto", sans-serif;
  margin: 0;
}

body {
  display: flex;
  flex-direction: column;
}

navbar {
  display: flex;
  align-items: baseline;
  justify-content: space-between;
  background-color: #1f2937;
}

navbar a {
  color: #f9faf8;
  text-decoration: none;
}
.logo {
  font-size: 24px;
  color: #f9faf8;
}

.container1 {
  display: flex;
  align-items: center;
  padding: 60px;
  border: solid black 1px;
  justify-content: center;
  gap: 100px;
  background-color: #1f2937;
  color: #f9faf8;
}

.container1 button {
  border-color: #1f2937;
}

.description-left {
  width: 400px;
}
.description-title {
  font-size: 48px;
  font-weight: bolder;
}

.image-placeholder-right {
  display: flex;
  justify-content: center;
  align-items: center;
  background: rgb(109, 105, 105);
  height: 200px;
  width: 400px;
}

.some-random-information {
  text-align: center;
  font-size: 36px;
  color: #1f2937;
}

.container2 {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  border: solid black 1px;
}

.item {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  width: 140px;
  color: #e5e7eb;
  border: solid black 1px;
}

.item .image-placeholder {
  height: 140px;
  width: 140px;
  border: solid rgb(45, 116, 222) 3px;
  border-radius: 3px;
}
.container3 {
  display: flex;
  flex-direction: column;
  align-items: end;
  background-color: #e5e7eb;
  border: solid black 1px;
}

.quote {
  font-size: 36px;
  font-weight: lighter;
  font-style: italic;
  color: #1f2937;
  border: solid black 1px;
}

.quote-author {
  font-weight: bold;
}

.container4 {
  margin: 60px;
  padding:30px;
  height: 140px;
  gap:30px;
  border-radius: 10px;
  display: flex;
  justify-content: space-around;
  align-items: center;
  background-color: rgb(45, 116, 222);
  color: white;
}

.call-to-action-title {
  font-weight: bold;
}

button {
  color: white;
  border: solid white 1px;
  border-radius: 5px;
  min-height: 30px;
  min-width: 100px;
  background-color: #3882f6;
}

footer {
  text-align: center;
  background-color: #1f2937;
  color: white;
}

